--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-crispy==1.8.1
 django-phone-field==1.8.1
 gunicorn==20.1.0
 psycopg2-binary==2.9.1
+python-decouple==3.4
 pytz==2021.1
 sqlparse==0.4.1
 whitenoise==5.3.0
